--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
 
     <div class="hero-image-wrapper" style="display:flex;justify-content:center;align-items:center;">
-      <!-- Add a profile image named assets/profile.jpg if desired -->
+      <img src="assets/profile.png" alt="Profile Image" class="hero-image">
       <div class="hero-image-placeholder">
         <span>Profile Image</span>
       </div>
