--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <h1>Highlights</h1>
     <div class="grid">
       <div class="card">
-        <h3>Healthcare Analytics &amp; Reporting</h3>
+        <h3>Healthcare Impact,&amp; Engineered </h3>
         <p>Delivered measurable improvements to reporting performance and operational efficiency in enterprise healthcare environments.</p>
         <ul>
           <li>Led advanced analytics initiatives at Children’s National Hospital across 17+ departments, cutting report runtimes by 30–40%.</li>
@@ -130,7 +130,7 @@
         </ul>
       </div>
       <div class="card">
-        <h3>Applied Machine Learning</h3>
+        <h3>Built & Shipped</h3>
         <p>Built and deployed end-to-end ML workflows for clinical and engineering use cases.</p>
         <ul>
           <li>Multimodal ICU outcome prediction using LSTM vitals and BioClinicalBERT embeddings with 6–8% AUROC lift over NLP-only baselines.</li>
