Fix HTML entity in Healthcare Impact header

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <h1>Highlights</h1>
     <div class="grid">
       <div class="card">
-        <h3>Healthcare Impact,&amp; Engineered </h3>
+        <h3>Healthcare Impact,amp; Engineered </h3>
         <p>Delivered measurable improvements to reporting performance and operational efficiency in enterprise healthcare environments.</p>
         <ul>
           <li>Led advanced analytics initiatives at Children’s National Hospital across 17+ departments, cutting report runtimes by 30–40%.</li>
