--- a/certifications.html
+++ b/certifications.html
@@ -42,7 +42,8 @@
           </div>
         </div>
         <p>
-          Credential covering core ITIL concepts, the service value system, and best practices for designing,
+          Credential ID: GR671779088SD
+          Covering core ITIL concepts, the service value system, and best practices for designing,
           operating, and continually improving IT services.
         </p>
       </div>
