--- a/awards.html
+++ b/awards.html
@@ -69,7 +69,7 @@
       
     <article class="card reveal">
       <button class="media award" data-modal="image" data-title="FY25Q4 Oracle Pinnacle Award" data-desc="Jul 2025" data-src="assets/pinnacle-award.jpg" aria-label="Open preview for FY25Q4 Oracle Pinnacle Award">
-        <img src="assets/pinnacle-award.jpg" alt="FY25Q4 Oracle Pinnacle Award certificate" loading="lazy" />
+        <img src="assets/pinnacle-award.png" alt="FY25Q4 Oracle Pinnacle Award certificate" loading="lazy" />
       </button>
       <h3>FY25Q4 Oracle Pinnacle Award</h3>
       <div class="meta">Jul 2025</div>
