--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <aside class="hero-card reveal" aria-label="Profile summary">
       <div class="profile">
         <div class="profile-img">
-          <img src="assets/profile.jpg" alt="Profile photo placeholder" loading="lazy" />
+          <img src="assets/profile.png" alt="Profile photo placeholder" loading="lazy" />
         </div>
         <div class="profile-stats">
           <div class="stat">
