--- a/projects.html
+++ b/projects.html
@@ -16,98 +16,139 @@
 <meta property="og:url" content="https://roshandharan.github.io/projects.html" />
 <meta name="twitter:card" content="summary_large_image" />
 <link rel="stylesheet" href="css/style.css" />
-<script type="application/ld+json">
-{"@context":"https://schema.org","@type":"Person","name":"Roshan Dharan Shashidharan","url":"https://roshandharan.github.io/projects.html","sameAs":["https://www.linkedin.com/in/roshan-dharan","https://github.com/Roshandharan"],"jobTitle":"Software Engineer / Data & Healthcare Analytics","affiliation":[{"@type":"Organization","name":"University of Southern California"}]}
-</script>
 </head>
 
 <body>
-<a class="skip-link" href="#content">Skip to content</a>
-
-<nav aria-label="Primary navigation">
-  <div class="container nav-inner">
-    <a class="brand" href="index.html">
-      <span class="brand-dot"></span>
-      <strong>Roshan Dharan</strong>
-    </a>
-    <div class="nav-actions">
-      <button class="icon-btn hamburger" id="navToggle">☰</button>
-      <div class="nav-links" id="navLinks">
-        <a href="index.html">Home</a>
-        <a href="experience.html">Experience</a>
-        <a href="projects.html">Projects</a>
-        <a href="publications.html">Publications</a>
-        <a href="certifications.html">Certifications</a>
-        <a href="awards.html">Awards</a>
-        <a href="resume.html">Resume</a>
-      </div>
-      <button class="icon-btn" id="themeToggle">◐</button>
-    </div>
-  </div>
-</nav>
-
 <main id="content">
 <section class="section">
 <div class="container">
-
 <div class="grid" id="projectsRoot">
 
-<!-- 2025 -->
-<article class="card reveal" data-order="202512">
-  <h3>ICU Outcome Prediction</h3>
+<!-- ICU -->
+<article class="card reveal" data-title="ICU Outcome Prediction"
+data-meta="Sklearn • PyTorch • Streamlit • Aug 2025 – Dec 2025 • Personal project"
+data-tags="Sklearn|PyTorch|Streamlit|Personal"
+data-order="202512">
+<button class="media project">
+<img src="assets/icu-project.png" alt="ICU Outcome Prediction cover" loading="lazy" />
+</button>
+<h3>ICU Outcome Prediction</h3>
+<div class="meta">Sklearn • PyTorch • Streamlit • Aug 2025 – Dec 2025 • Personal project</div>
+<p>Built a multimodal ICU outcome predictor combining LSTM vital sign modeling with BioClinicalBERT embeddings of clinical notes.</p>
 </article>
 
-<article class="card reveal" data-order="202511">
-  <h3>340B Extract – Split Transaction File | Verity Solutions</h3>
+<!-- 340B -->
+<article class="card reveal" data-title="340B Extract – Split Transaction File | Verity Solutions"
+data-meta="Oracle Health • Jan 2025 – Mar 2025"
+data-tags="Oracle Health"
+data-order="202511">
+<button class="media project">
+<img src="assets/340b.png" alt="340B cover" loading="lazy" />
+</button>
+<h3>340B Extract – Split Transaction File | Verity Solutions</h3>
+<div class="meta">Oracle Health • Jan 2025 – Mar 2025</div>
 </article>
 
-<article class="card reveal" data-order="202510">
-  <h3>CLABSI Audit Report | Central Line–Associated Bloodstream Infection</h3>
+<!-- CLABSI -->
+<article class="card reveal" data-title="CLABSI Audit Report"
+data-meta="Oracle Health • Jan 2025 – Mar 2025"
+data-tags="Oracle Health"
+data-order="202510">
+<button class="media project">
+<img src="assets/clabsi.png" alt="CLABSI cover" loading="lazy" />
+</button>
+<h3>CLABSI Audit Report</h3>
+<div class="meta">Oracle Health • Jan 2025 – Mar 2025</div>
 </article>
 
-<!-- 2024 -->
-<article class="card reveal" data-order="202409">
-  <h3>HIDI Extract | District of Columbia Hospital Association</h3>
+<!-- HIDI -->
+<article class="card reveal" data-title="HIDI Extract"
+data-meta="Oracle Health • Sep 2024 – Dec 2024"
+data-tags="Oracle Health"
+data-order="202409">
+<button class="media project">
+<img src="assets/hidi.png" alt="HIDI cover" loading="lazy" />
+</button>
+<h3>HIDI Extract</h3>
+<div class="meta">Oracle Health • Sep 2024 – Dec 2024</div>
 </article>
 
-<article class="card reveal" data-order="202408">
-  <h3>MedeAnalytics | Patient Account, Charges, Transaction, UCRN Files</h3>
+<!-- MedeAnalytics -->
+<article class="card reveal" data-title="MedeAnalytics Files"
+data-meta="Oracle Health • Sep 2024 – Dec 2024"
+data-tags="Oracle Health"
+data-order="202408">
+<button class="media project">
+<img src="assets/mede.png" alt="MedeAnalytics cover" loading="lazy" />
+</button>
+<h3>MedeAnalytics | Patient Account, Charges, Transaction, UCRN Files</h3>
+<div class="meta">Oracle Health • Sep 2024 – Dec 2024</div>
 </article>
 
-<!-- 2023 -->
-<article class="card reveal" data-order="202306">
-  <h3>Power BI Report Migration from On-Premise to Snowflake</h3>
+<!-- Power BI -->
+<article class="card reveal" data-title="Power BI Migration"
+data-meta="Oracle Cerner • May 2023 – Jun 2023"
+data-tags="Oracle Cerner"
+data-order="202306">
+<button class="media project">
+<img src="assets/power.png" alt="Power BI cover" loading="lazy" />
+</button>
+<h3>Power BI Report Migration from On-Premise to Snowflake</h3>
+<div class="meta">Oracle Cerner • May 2023 – Jun 2023</div>
 </article>
 
-<article class="card reveal" data-order="202305">
-  <h3>Web Automation Using Selenium</h3>
+<!-- Selenium -->
+<article class="card reveal" data-title="Web Automation Using Selenium"
+data-meta="Oracle Cerner • Jan 2023 – Jun 2023"
+data-tags="Oracle Cerner"
+data-order="202305">
+<button class="media project">
+<img src="assets/auto.png" alt="Automation cover" loading="lazy" />
+</button>
+<h3>Web Automation Using Selenium</h3>
+<div class="meta">Oracle Cerner • Jan 2023 – Jun 2023</div>
 </article>
 
-<article class="card reveal" data-order="202304">
-  <h3>AI-Powered Battery Management System</h3>
+<!-- Battery -->
+<article class="card reveal" data-title="AI-Powered Battery Management System"
+data-meta="Python • Deep Learning • May 2023 – Nov 2023"
+data-tags="Python|Deep Learning"
+data-order="202304">
+<button class="media project">
+<img src="assets/battery-project.png" alt="Battery cover" loading="lazy" />
+</button>
+<h3>AI-Powered Battery Management System</h3>
+<div class="meta">Python • Deep Learning • May 2023 – Nov 2023</div>
 </article>
 
-<!-- 2022 -->
-<article class="card reveal" data-order="202204">
-  <h3>Blood Bank Management Using AWS</h3>
+<!-- Blood Bank -->
+<article class="card reveal" data-title="Blood Bank Management Using AWS"
+data-meta="REVA University • Feb 2022 – Apr 2022"
+data-tags="REVA University"
+data-order="202204">
+<button class="media project">
+<img src="assets/blood.png" alt="Blood Bank cover" loading="lazy" />
+</button>
+<h3>Blood Bank Management Using AWS</h3>
+<div class="meta">REVA University • Feb 2022 – Apr 2022</div>
 </article>
 
-<!-- 2021 -->
-<article class="card reveal" data-order="202111">
-  <h3>Face Mask Detection Using TensorFlow and Python</h3>
+<!-- Face Mask -->
+<article class="card reveal" data-title="Face Mask Detection"
+data-meta="REVA University • Oct 2021 – Nov 2021"
+data-tags="REVA University"
+data-order="202111">
+<button class="media project">
+<img src="assets/face-mask.png" alt="Face Mask cover" loading="lazy" />
+</button>
+<h3>Face Mask Detection Using TensorFlow and Python</h3>
+<div class="meta">REVA University • Oct 2021 – Nov 2021</div>
 </article>
 
 </div>
-
 </div>
 </section>
 </main>
-
-<footer>
-  <div class="container">
-    <div>© 2026 Roshan Dharan. Projects.</div>
-  </div>
-</footer>
 
 <script src="js/main.js"></script>
 </body>
