--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <div class="grid">
       
       <article class="card reveal">
-        <h3>Healthcare Analytics & Reporting</h3>
+        <h3>Healthcare Software Engineering Imapct</h3>
         <p>Delivered measurable improvements to reporting performance and operational efficiency in enterprise healthcare environments.</p>
         <ul>
           <li>Led advanced analytics initiatives at Children’s National Hospital across 17+ departments, cutting report runtimes by 30–40%.</li><li>Designed SQL and ETL pipelines processing 600,000+ patient records/day, shaping $200M+ revenue-impacting decisions.</li><li>Built compliant 340B, HIDI, and CLABSI audit solutions, reclaiming 114+ hours/year and reducing pharmacy drug spend by over $12M annually.</li>
@@ -185,7 +185,7 @@
       </article>
       
       <article class="card reveal">
-        <h3>Applied Machine Learning</h3>
+        <h3>Others</h3>
         <p>Built and deployed end-to-end ML workflows for clinical and engineering use cases.</p>
         <ul>
           <li>Multimodal ICU outcome prediction using LSTM vitals and BioClinicalBERT embeddings with 6–8% AUROC lift over NLP-only baselines.</li><li>EV battery SoC/SoH prediction over 5,000+ charging cycles using deep learning, with a peer-reviewed journal publication.</li><li>Deployed models as REST services with CI/CD integration for reproducibility and experimentation.</li>
