Correct header text for healthcare software impact

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <div class="grid">
       
       <article class="card reveal">
-        <h3>Healthcare Software Engineering Imapct</h3>
+        <h3>Healthcare Software - Engineering Imapct</h3>
         <p>Delivered measurable improvements to reporting performance and operational efficiency in enterprise healthcare environments.</p>
         <ul>
           <li>Led advanced analytics initiatives at Children’s National Hospital across 17+ departments, cutting report runtimes by 30–40%.</li><li>Designed SQL and ETL pipelines processing 600,000+ patient records/day, shaping $200M+ revenue-impacting decisions.</li><li>Built compliant 340B, HIDI, and CLABSI audit solutions, reclaiming 114+ hours/year and reducing pharmacy drug spend by over $12M annually.</li>
